--- a/editors-definitions/che-idea-server-latest.yaml
+++ b/editors-definitions/che-idea-server-latest.yaml
@@ -18,6 +18,9 @@ metadata:
   tags:
     - Tech-Preview
   attributes:
+    arch:
+      - x86_64
+      - arm64
     publisher: che-incubator
     version: latest
     provider: Provided by [JetBrains](https://www.jetbrains.com/) under [License](https://www.jetbrains.com/legal/docs/toolbox/user/)
