--- a/editors-definitions/che-idea-next.yaml
+++ b/editors-definitions/che-idea-next.yaml
@@ -18,6 +18,9 @@ metadata:
   tags:
     - Deprecated
   attributes:
+    arch:
+      - x86_64
+      - arm64
     publisher: che-incubator
     version: next
     title: JetBrains IntelliJ IDEA Community IDE for Eclipse Che - next
