--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1110,6 +1110,10 @@ spec:
                       To disable workspace run timeout, set this value to -1.
                     format: int32
                     type: integer
+                  jetbrainsIDEStorageHost:
+                    default: https://download.jetbrains.com/
+                    description: The Host URL for JetBrains IDE
+                    type: string
                 required:
                 - enable
                 type: object
@@ -5329,6 +5333,7 @@ spec:
                   maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
+                  jetbrainsIDEStorageHost: https://download.jetbrains.com/
                   startTimeoutSeconds: 300
                   storage:
                     pvcStrategy: per-user
@@ -7447,6 +7452,10 @@ spec:
                       To disable workspace run timeout, set this value to -1.
                     format: int32
                     type: integer
+                  jetbrainsIDEStorageHost:
+                    default: https://download.jetbrains.com/
+                    description: The Host URL for JetBrains IDE
+                    type: string
                   security:
                     description: Workspace security configuration.
                     properties:
