--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -1131,6 +1131,10 @@ spec:
                       To disable workspace run timeout, set this value to -1.
                     format: int32
                     type: integer
+                  jetbrainsIDEStorageHost:
+                    default: https://download.jetbrains.com/
+                    description: The Host URL for JetBrains IDE
+                    type: string
                 required:
                 - enable
                 type: object
@@ -5350,6 +5354,7 @@ spec:
                   maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
+                  jetbrainsIDEStorageHost: https://download.jetbrains.com/
                   startTimeoutSeconds: 300
                   storage:
                     pvcStrategy: per-user
@@ -7468,6 +7473,10 @@ spec:
                       To disable workspace run timeout, set this value to -1.
                     format: int32
                     type: integer
+                  jetbrainsIDEStorageHost:
+                    default: https://download.jetbrains.com/
+                    description: The Host URL for JetBrains IDE
+                    type: string
                   security:
                     description: Workspace security configuration.
                     properties:
