--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -1126,6 +1126,10 @@ spec:
                       To disable workspace run timeout, set this value to -1.
                     format: int32
                     type: integer
+                  jetbrainsIDEStorageHost:
+                    default: https://download.jetbrains.com/
+                    description: The Host URL for JetBrains IDE
+                    type: string
                 required:
                 - enable
                 type: object
@@ -5345,6 +5349,7 @@ spec:
                   maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
+                  jetbrainsIDEStorageHost: https://download.jetbrains.com/
                   startTimeoutSeconds: 300
                   storage:
                     pvcStrategy: per-user
@@ -7463,6 +7468,10 @@ spec:
                       To disable workspace run timeout, set this value to -1.
                     format: int32
                     type: integer
+                  jetbrainsIDEStorageHost:
+                    default: https://download.jetbrains.com/
+                    description: The Host URL for JetBrains IDE
+                    type: string
                   security:
                     description: Workspace security configuration.
                     properties:
