--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -5329,7 +5329,7 @@ spec:
                   maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
-                  jetbrainsIDEStorageHost: https://download.jetbrains.com/
+                  jetBrainsIDEStorageHost: https://download.jetbrains.com/
                   startTimeoutSeconds: 300
                   storage:
                     pvcStrategy: per-user
@@ -7448,7 +7448,7 @@ spec:
                       To disable workspace run timeout, set this value to -1.
                     format: int32
                     type: integer
-                  jetbrainsIDEStorageHost:
+                  jetBrainsIDEStorageHost:
                     default: https://download.jetbrains.com/
                     description: The Host URL for JetBrains IDE
                     type: string
