--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -5345,7 +5345,7 @@ spec:
                   maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
-                  jetbrainsIDEStorageHost: https://download.jetbrains.com/
+                  jetBrainsIDEStorageHost: https://download.jetbrains.com/
                   startTimeoutSeconds: 300
                   storage:
                     pvcStrategy: per-user
@@ -7464,7 +7464,7 @@ spec:
                       To disable workspace run timeout, set this value to -1.
                     format: int32
                     type: integer
-                  jetbrainsIDEStorageHost:
+                  jetBrainsIDEStorageHost:
                     default: https://download.jetbrains.com/
                     description: The Host URL for JetBrains IDE
                     type: string
