changed Url to downloadUrl key

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7027,7 +7027,7 @@ spec:
                     editorDownloadUrls:
                       default:
                         - editor: JetBrains
-                          url: https://download.jetbrains.com/
+                          downloadUrl: https://download.jetbrains.com/
                       description: The downloaded list of editors
                       items:
                         properties:
