--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -6981,7 +6981,7 @@ spec:
                   editorDownloadUrls:
                     default:
                     - editor: JetBrains
-                      url: https://download.jetbrains.com/
+                      downloadUrl: https://download.jetbrains.com/
                     description: The downloaded list of editors
                     items:
                       properties:
