--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -7002,7 +7002,7 @@ spec:
                   editorDownloadUrls:
                     default:
                     - editor: JetBrains
-                      url: https://download.jetbrains.com/
+                      downloadUrl: https://download.jetbrains.com/
                     description: The downloaded list of editors
                     items:
                       properties:
