--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -6997,7 +6997,7 @@ spec:
                   editorDownloadUrls:
                     default:
                     - editor: JetBrains
-                      url: https://download.jetbrains.com/
+                      downloadUrl: https://download.jetbrains.com/
                     description: The downloaded list of editors
                     items:
                       properties:
