--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -5348,8 +5348,8 @@ spec:
                     autoProvision: true
                     template: <username>-che
                   editorDownloadUrls:
-                  - downloadUrl: https://download.jetbrains.com/
-                    editor: JetBrains
+                  - editor: JetBrains
+                    downloadUrl: "https://download.jetbrains.com/"
                   maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
@@ -7000,9 +7000,6 @@ spec:
                            - SETUID
                     type: boolean
                   editorDownloadUrls:
-                    default:
-                    - editor: JetBrains
-                      downloadUrl: https://download.jetbrains.com/
                     description: The downloaded list of editors
                     items:
                       properties:
