--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -5342,9 +5342,6 @@ spec:
                   defaultNamespace:
                     autoProvision: true
                     template: <username>-che
-                  editorDownloadUrls:
-                  - editor: JetBrains
-                    url: https://download.jetbrains.com/
                   maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
@@ -7004,7 +7001,7 @@ spec:
                         editor:
                           description: |-
                             The editor which needs to download to specify.
-                            The plugin ID must have `publisher/name/version` format.
+                            The editor ID must have `publisher/name/version` format.
                           type: string
                         url:
                           description: The download url of the editor.
