ci: Add new 7.107.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -117,3 +117,5 @@ entries:
     replaces: eclipse-che.v7.104.0
   - name: eclipse-che.v7.106.0
     replaces: eclipse-che.v7.105.0
+  - name: eclipse-che.v7.107.0
+    replaces: eclipse-che.v7.106.0
