--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Global Owners
-* @SDawley @tolusha @ibuziuk @mkuznyetsov @dkwon17 @rohanKanojia
+* @SDawley @tolusha @ibuziuk @mkuznyetsov @dkwon17
