chore: Allow external TLS configuration for ingress/routes
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -7087,6 +7087,24 @@ spec:
                     format: int64
                     minimum: -1
                     type: integer
+                  networking:
+                    properties:
+                      externalTLSConfig:
+                        properties:
+                          annotations:
+                            additionalProperties:
+                              type: string
+                            type: object
+                          enabled:
+                            type: boolean
+                          labels:
+                            additionalProperties:
+                              type: string
+                            type: object
+                        required:
+                        - enabled
+                        type: object
+                    type: object
                   nodeSelector:
                     additionalProperties:
                       type: string
