--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -7108,6 +7108,24 @@ spec:
                     format: int64
                     minimum: -1
                     type: integer
+                  networking:
+                    properties:
+                      externalTLSConfig:
+                        properties:
+                          annotations:
+                            additionalProperties:
+                              type: string
+                            type: object
+                          enabled:
+                            type: boolean
+                          labels:
+                            additionalProperties:
+                              type: string
+                            type: object
+                        required:
+                        - enabled
+                        type: object
+                    type: object
                   nodeSelector:
                     additionalProperties:
                       type: string
