chore: Allow external TLS configuration for ingress/routes
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7150,7 +7150,8 @@ spec:
                             enabled:
                               description: |-
                                 Enabled determines whether external TLS configuration is used.
-                                If set to true, the operator will not manage TLS certificates for ingress/route objects.
+                                If set to true, the operator will not set TLS config for ingress/route objects.
+                                Instead, it ensures that any custom TLS configuration will not be reverted on synchronization.
                               type: boolean
                             labels:
                               additionalProperties:
