--- a/editors-definitions/che-idea-latest.yaml
+++ b/editors-definitions/che-idea-latest.yaml
@@ -153,8 +153,7 @@ components:
   - name: che-idea-injector
     container:
       image: quay.io/che-incubator/che-idea:latest
-      command:
-        - /projector/entrypoint-init-container.sh
+      command: ['/projector/entrypoint-init-container.sh', 'idea', 'che-incubator/che-idea-server/latest']
       env:
         - name: PROJECTOR_VOLUME_MOUNT
           value: /projector-volume
