--- a/editors-definitions/che-pycharm-server-next.yaml
+++ b/editors-definitions/che-pycharm-server-next.yaml
@@ -72,7 +72,7 @@ components:
   - name: editor-injector
     container:
       image: quay.io/che-incubator/che-idea-dev-server:next
-      command: ['/entrypoint-init-container.sh', 'pycharm']
+      command: ['/entrypoint-init-container.sh', 'pycharm', 'che-incubator/che-pycharm-server/next']
       volumeMounts:
         - name: idea-server
           path: /idea-server
