--- a/editors-definitions/che-rubymine-server-latest.yaml
+++ b/editors-definitions/che-rubymine-server-latest.yaml
@@ -73,7 +73,7 @@ components:
   - name: editor-injector
     container:
       image: quay.io/che-incubator/che-idea-dev-server:latest
-      command: ['/entrypoint-init-container.sh', 'rubymine']
+      command: ['/entrypoint-init-container.sh', 'rubymine', 'che-incubator/che-rubymine-server/latest']
       volumeMounts:
         - name: idea-server
           path: /idea-server
