chore: Allow to configure editor download urls
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -6846,11 +6846,13 @@ spec:
                     type: boolean
                   editorsDownloadUrls:
                     description: |-
-                      EditorsDownloadUrls provides a list of custom download URLs for editor binaries.
+                      EditorsDownloadUrls provides a list of custom download URLs for JetBrains editors
+                      in a local-to-remote flow.
+                      It is particularly useful in disconnected or air-gapped environments,
+                      where editors cannot be downloaded from the public internet.
                       Each entry contains an editor identifier in the `publisher/name/version` format
                       and the corresponding download URL.
-                      This field is particularly useful in disconnected or air-gapped environments,
-                      where editors cannot be downloaded from the public internet.
+                      Currently, this field is intended only for JetBrains editors and should not be used for other editor types.
                     items:
                       properties:
                         editor:
