chore: Allow to configure editor download urls (#2026)
* chore: Allow to configure editor download urls

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -6874,6 +6874,28 @@ spec:
                              - SETGID
                              - SETUID
                       type: boolean
+                    editorsDownloadUrls:
+                      description: |-
+                        EditorsDownloadUrls provides a list of custom download URLs for JetBrains editors
+                        in a local-to-remote flow.
+                        It is particularly useful in disconnected or air-gapped environments,
+                        where editors cannot be downloaded from the public internet.
+                        Each entry contains an editor identifier in the `publisher/name/version` format
+                        and the corresponding download URL.
+                        Currently, this field is intended only for JetBrains editors and should not be used for other editor types.
+                      items:
+                        properties:
+                          editor:
+                            description: The editor ID must have `publisher/name/version`
+                              format.
+                            type: string
+                          url:
+                            type: string
+                        required:
+                          - editor
+                          - url
+                        type: object
+                      type: array
                     gatewayContainer:
                       description: GatewayContainer configuration.
                       properties:
