--- a/editors-definitions/che-phpstorm-server-latest.yaml
+++ b/editors-definitions/che-phpstorm-server-latest.yaml
@@ -67,7 +67,7 @@ components:
   - name: editor-injector
     container:
       image: quay.io/che-incubator/che-idea-dev-server:latest
-      command: ['/entrypoint-init-container.sh', 'phpstorm']
+      command: ['/entrypoint-init-container.sh', 'phpstorm', 'che-incubator/che-phpstorm-server/latest']
       volumeMounts:
         - name: idea-server
           path: /idea-server
