Remove IDE version numbers from the editors name
Signed-off-by: Artem Zatsarynnyi <azatsary@redhat.com>

--- a/editors-definitions/che-phpstorm-server-latest.yaml
+++ b/editors-definitions/che-phpstorm-server-latest.yaml
@@ -13,7 +13,7 @@
 schemaVersion: 2.3.0
 metadata:
   name: che-phpstorm-server
-  displayName: JetBrains PhpStorm 2024.2.3 (desktop)
+  displayName: JetBrains PhpStorm (desktop)
   description: JetBrains PhpStorm for Eclipse Che - latest
   tags:
     - Tech-Preview
