--- a/editors-definitions/che-clion-server-next.yaml
+++ b/editors-definitions/che-clion-server-next.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2024 Red Hat, Inc.
+# Copyright (c) 2024-2025 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -13,7 +13,7 @@
 schemaVersion: 2.3.0
 metadata:
   name: che-clion-server
-  displayName: JetBrains CLion 2024.2.3 (desktop)
+  displayName: JetBrains CLion (desktop)
   description: JetBrains CLion for Eclipse Che - next
   tags:
     - Tech-Preview
