--- a/editors-definitions/che-idea-server-next.yaml
+++ b/editors-definitions/che-idea-server-next.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2024 Red Hat, Inc.
+# Copyright (c) 2024-2025 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -13,7 +13,7 @@
 schemaVersion: 2.3.0
 metadata:
   name: che-idea-server
-  displayName: JetBrains IntelliJ IDEA Ultimate (desktop) 2024.2.3
+  displayName: JetBrains IntelliJ IDEA Ultimate (desktop)
   description: JetBrains IntelliJ IDEA Ultimate dev server for Eclipse Che - next
   tags:
     - Tech-Preview
