--- a/editors-definitions/che-webstorm-server-latest.yaml
+++ b/editors-definitions/che-webstorm-server-latest.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2024 Red Hat, Inc.
+# Copyright (c) 2024-2025 Red Hat, Inc.
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -13,7 +13,7 @@
 schemaVersion: 2.3.0
 metadata:
   name: che-webstorm-server
-  displayName: JetBrains WebStorm 2024.2.3 (desktop)
+  displayName: JetBrains WebStorm (desktop)
   description: JetBrains WebStorm for Eclipse Che - latest
   tags:
     - Tech-Preview
