--- a/editors-definitions/che-goland-server-latest.yaml
+++ b/editors-definitions/che-goland-server-latest.yaml
@@ -66,7 +66,7 @@ components:
     volume: {}
   - name: editor-injector
     container:
-      image: quay.io/che-incubator/che-idea-dev-server:next
+      image: quay.io/che-incubator/che-idea-dev-server:latest
       command: ['/entrypoint-init-container.sh', 'goland', 'che-incubator/che-goland-server/latest']
       volumeMounts:
         - name: idea-server
